# stoar

./: .gitignore  Cargo.toml  README.md
examples/: advanced_usage.rs  basic_usage.rs  test_debug.rs
src/: error.rs  lib.rs  store.rs
tests/: cas_core.fozzy.json  distributed.fozzy.json  failing.fozzy.json  stoar_det.fozzy.json  stoar_explore_pass.fozzy.json  stoar_host_behavior.fozzy.json  stoar_namespace_host.fozzy.json
