[package]
name = "stoar"
version = "0.1.0"
edition = "2021"
autoexamples = false

[lib]
name = "stoar"
path = "src/lib.rs"

[[bin]]
name = "stoar"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
# SQLite - bundled for portability
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

# CLI
clap = { version = "4", features = ["derive"], optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "io-util"], optional = true }
base64 = "0.22"
futures-util = "0.3"

[features]
default = []
cli = ["tracing-subscriber", "clap", "axum", "tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
